--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,12 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-color: #000028;
+  --background-img: url(../images/cover-image-dark.png);
+  --main-font: "IBM Plex Mono", sans-serif;
+  --text-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --title-color: #DB00FF;
+  --text-color-decor: #000028;
+  --color-hover-button: #FF007066;
+  --color-button-text: #FF0070;
+  --color-section-title: #FF0070;
 }
