--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,36 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+:root.theme_light {
+  --background-img: url(../images/cover-image-light.png);
+  --background-color: #fff1f7;
+  --main-font: "IBM Plex Mono", sans-serif;
+  --text-color: #353430;
+  --accent-color: #ff8dcb;
+  --title-color: #FFC2E6;
+  --color-button-text: #353430;
+  --color-hover-button: #32312D66;
+  --text-color-decor: #353430;
+  --color-section-title: #353430;
 
-.page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+
 }
+
+  @media (prefers-color-scheme: light) {
+    :root {
+      --background-img: url(../images/cover-image-light.png);
+      --background-color: #fff1f7;
+      --main-font: "IBM Plex Mono", sans-serif;
+      --text-color: #353430;
+      --accent-color: #ff8dcb;
+      --title-color: #FFC2E6;
+      --color-button-text: #353430;
+      --color-hover-button: #32312D66;
+      --text-color-decor: #353430;
+      --color-section-title: #353430;
+    }
+
+    .rec {
+      display: none;
+    }
+    .rec::after {
+      display: none;
+    }
+  }
