--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,498 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  max-width: 1024px;
+  width: 100%;
+  background-image: var(--background-img);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: var(--background-color);
+
+}
+
+.header {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+  min-height: 768px;
+  font-family: var(--main-font);
+  
+}
+
+.header__theme-menu-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.header__theme-menu-button:hover {
+  cursor: pointer;
+  outline: 1px solid var(--color-hover-button);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid currentColor;
+}
+
+.header__theme-menu-button {
+  color: var(--color-button-text);
+  min-width: 70px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid currentColor;
+  pointer-events: none;
+}
+
+.header {
+  position: relative;
+}
+
+.decorated-zone {
+  padding: 20px;
+}
+
+.header_title {
+  color: var(--title-color);
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  font-family: var(--main-font);
+  font-weight: bold;
+  padding-block-start: 270px;
+  text-shadow: 4px 4px 0 var(--accent-color);
+  line-height: 82.5%;
+  margin-inline-start: -18px;
+}
+
+.paragraph_header {
+  display: block;
+  justify-self: flex-end;
+  padding-block-end: 120px;
+  max-width: 491px;
+}
+
+.header_description {
+  font-weight: bold;
+  font-size: 18px;
+  color: #000028;
+  line-height: 23px;
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  color: var(--text-color-decor);
+}
+
+.rec {
+  position: absolute;
+  font-size: 18px;
+  color: var(--accent-color);
+  line-height: 25px;
+  right: 33px;
+  top: 20px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.rec::after {
+  content: " ";
+  display: block;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: var(--accent-color);
+  box-shadow: 0 0 3px 3px var(--accent-color);
+}
+
+.decorated-zone::after {
+  content: " ";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-right: 1px solid var(--color-button-text);
+  border-top: 1px solid var(--color-button-text);
+  right: 24px;
+  top: 20px;
+}
+
+.decorated-zone::before {
+  content: " ";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-left: 1px solid var(--color-button-text);
+  border-bottom: 1px solid var(--color-button-text);
+  left: 24px;
+  bottom: 26px;
+}
+
+.main {
+  font-size: 18px;
+  font-family: var(--main-font);
+  padding: 24px;
+}
+
+.why_hard_section {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 10px;
+  margin-block-start: 30px;
+}
+
+.section_title {
+  grid-column: 1/2;
+  color: var(--color-section-title);
+  font-size: 18px;
+}
+
+.concentration_article {
+  grid-column: 2/3;
+}
+
+.text_article {
+  line-height: 23.4px;
+  padding-block-start: 10px;
+  color: var(--text-color);
+}
+
+.subtitle {
+  margin-block-start: 20px;
+}
+
+.concentration_section {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding-block-start: 74px;
+}
+
+.multitasking_article {
+  grid-column: 1/2;
+}
+
+.gold_fish_section {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 10px;
+  padding-block-start: 52px;
+}
+
+.gold_fish_article {
+  grid-column: 2/3;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+.gold_fish_title {
+  background-color: var(--accent-color);
+  color: var(--text-color-decor);
+  font-weight: normal;
+}
+
+.gold_fish_text_article {
+  line-height: 23.4px;
+  color: var( --text-color);
+  margin-block-start: -8px;
+}
+
+.gallery {
+  padding-block-start: 81px;
+}
+
+.gallery_decor {
+  padding-block-start: 16px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(315px, 1fr));
+  
+  gap: 20px;
+}
+
+.gellery_image {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+}
+
+.sunset {
+  grid-column: 1/3;
+
+}
+
+.ice-cream {
+  grid-row: 1/3;
+  grid-column: 3/4;
+}
+
+.tape {
+  grid-row: 2/4;
+}
+
+.street {
+  grid-column: 2/4;
+}
+
+footer {
+  padding-block-start: 60px;
+  min-height: 768px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.decor::after {
+  content: " ";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-right: 1px solid var(--color-button-text);
+  border-top: 1px solid var(--color-button-text);
+  right: 23px;
+  top: 56px;
+}
+
+.decor::before {
+  content: " ";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-left: 1px solid var(--color-button-text);
+  border-bottom: 1px solid var(--color-button-text);
+  left: 24px;
+  bottom: -10px;
+}
+
+
+.footer_title {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 157px;
+  line-height: 82.5%;
+  color: var(--title-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.text_link {
+  text-shadow: 2px 2px 0px var(--accent-color);
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.text_link:hover {
+  border-bottom: 1px solid currentColor;
+}
+
+.text_link:focus {
+  outline: none;
+}
+
+.text_link:focus-visible {
+  outline: 1px solid currentColor
+}
+
+@media (width <= 768px) {
+  .header__theme-menu-list {
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+    padding-block-start: 170px;
+  }
+
+  .header_title {
+    padding-block-start: 178px;
+  }
+
+  .paragraph_header { 
+    padding-block-end: 163px;
+    max-width: 364px;
+  }
+
+  .rec {
+    right: 30px;
+  }
+
+  .decorated-zone::after {
+    right: 20px;
+  }
+
+  .decorated-zone::before {
+    left: 20px;
+    bottom: 20px;
+  }
+  
+  .main {
+    padding: 20px;
+  }
+
+  .why_hard_section {
+    gap: 20px;
+    margin-block-start: 40px;
+  }
+
+  .concentration_section {
+    padding-block-start: 80px;
+    display: inline-block;
+    justify-content: space-around;
+  }
+  .section_title {
+    max-width: 150px;
+    margin-block-end: 20px;
+  }
+
+  .food, .gadget {
+    margin-block-start: 20px;
+  }
+
+  .gold_fish_section {
+    gap: 20px;
+    padding-block-start: 80px;
+  }
+  
+  .mobile_section_title_gold_fish {
+    min-width: 230px;
+  }
+
+  .gold_fish_article {
+    gap: 19px;
+  }
+
+  .gallery {
+    padding-block-start: 78px;
+  }
+
+  .gallery_decor {
+    grid-template-columns: auto;
+  }
+
+  .decor::after {
+    right: 20px;
+    top: 63px;
+  }
+
+  .decor::before {
+    left: 20px;
+    bottom: 7px;
+  }
+
+  .footer {
+    min-height: 1054px;
+  }
+
+  .footer_title {
+    font-size: 120px;
+  }
+}
+
+@media (width <= 375px) {
+  .header__theme-menu-list {
+    padding-block-start: 64px;
+  }
+
+  .main,.decorated-zone {
+    padding: 10px;
+  }
+
+  .header_title {
+    padding-block-start: 67px;
+    margin-inline-start: 0;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
+  }
+
+  .paragraph_header {
+    padding-block-end: 57px;
+  }
+
+  .decorated-zone::after {
+    right: 10px;
+    top: 10px;
+  }
+
+  .decorated-zone::before {
+    left: 10px;
+    bottom: 10px;
+  }
+
+  .rec {
+    right: 20px;
+    top: 10px;
+  }
+
+  .why_hard_section {
+    display: inline;
+  }
+
+  .header {
+    min-height: 668px;
+  }
+
+  .section_title {
+    max-width: none;
+    padding-block-start: 30px;
+  }
+
+  .concentration_section {
+    padding-block-start: 20px;
+  }
+
+  .gold_fish_section {
+    display: flex;
+    flex-direction: column;
+    padding-block-start: 18px;
+    gap: 0;
+  }
+
+  .section_title {
+    padding-block-start: 30px;
+  }
+
+  .gold_fish_article {
+    padding-block-start: 0;
+    gap: 20px;
+    margin-block-end: 0;
+  }
+
+  .gold_fish_title {
+    margin-block-start: -2px;
+  }
+
+  .gallery {
+    padding-block-start: 48px;
+  }
+
+  .gallery_decor {
+    display: flex;
+    flex-direction: column;
+    padding-block-start: 10px;
+    gap: 11px;
+  }
+
+  .footer {
+    min-height: 690px;
+    padding-block-start: 30px;
+  }
+
+  .footer_title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+
+  .decor::after {
+    right: 10px;
+    top: 38px;
+  }
+
+  .decor::before {
+    left: 10px;
+    bottom: 5px;
+  }
 }
