--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,13 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root.page {
+  --background-color: #000028;
+  --background-img: url(../images/cover-image-dark.png);
+  --main-font: "IBM Plex Mono", sans-serif;
+  --text-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --title-color: #DB00FF;
+  --text-color-decor: #000028;
+  --color-hover-button: #FF007066;
+  --color-button-text: #FF0070;
+  --color-section-title: #FF0070;
+
+}
