--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,4 @@
-:root.page {
+:root {
   --background-color: #000028;
   --background-img: url(../images/cover-image-dark.png);
   --main-font: "IBM Plex Mono", sans-serif;
@@ -9,5 +9,5 @@
   --color-hover-button: #FF007066;
   --color-button-text: #FF0070;
   --color-section-title: #FF0070;
-
+  --rec-color: #FF0070;
 }
