--- a/styles/style.css
+++ b/styles/style.css
@@ -160,7 +160,7 @@
 }
 
 .subtitle {
-  margin-block-start: -5px;
+  margin-block-start: 20px;
 }
 
 .concentration_section {
@@ -178,7 +178,7 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 10px;
-  padding-block-start: 55px;
+  padding-block-start: 79px;
 }
 
 .gold_fish_article {
@@ -238,13 +238,15 @@
 }
 
 footer {
-  padding-block-start: 70px;
+  padding-block-start: 75px;
+  margin-block-end: 40px;
   min-height: 768px;
   height: 100vh;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+ 
 }
 
 .decor::after {
@@ -266,7 +268,7 @@ footer {
   border-left: 1px solid var(--color-button-text);
   border-bottom: 1px solid var(--color-button-text);
   left: 24px;
-  bottom: 10px;
+  bottom: -10px;
 }
 
 .footer_title {
