--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
   background-size: cover;
   background-attachment: fixed;
   background-color: var(--background-color);
+  font-size: 18px;
 }
 
 .header {
@@ -237,8 +238,7 @@
 }
 
 footer {
-  width: 100%;
-  min-height: 668px;
+  min-height: 768px;
   margin-block-start: 36px;
   position: relative;
   display: flex;
@@ -297,6 +297,11 @@ footer {
 }
 
 @media (width <= 768px) {
+
+  .header {
+    height: 100vh;
+  }
+
   .header__theme-menu-list {
     flex-direction: column;
     justify-content: end;
@@ -433,7 +438,7 @@ footer {
   }
 
   .header {
-    min-height: 668px;
+    height: 100vh;
   }
 
   .section_title {
