--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   height: 100vh;
-  min-height: 768px;
+  min-height: 668px;
   font-family: var(--main-font);
   position: relative;
 }
@@ -61,7 +61,7 @@
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   font-family: var(--main-font);
   font-weight: bold;
-  padding-block-start: 270px;
+  padding-block-start: 274px;
   text-shadow: 4px 4px 0 var(--accent-color);
   line-height: 82.5%;
   margin-inline-start: -18px;
@@ -70,7 +70,7 @@
 .paragraph_header {
   display: block;
   justify-self: flex-end;
-  padding-block-end: 120px;
+  padding-block-end: 117px;
   max-width: 491px;
 }
 
@@ -91,7 +91,7 @@
   font-size: 18px;
   color: var(--rec-color);
   line-height: 25px;
-  right: 33px;
+  right: 30px;
   top: 20px;
   display: flex;
   align-items: center;
@@ -115,7 +115,7 @@
   block-size: 25px;
   border-right: 1px solid var(--color-button-text);
   border-top: 1px solid var(--color-button-text);
-  right: 24px;
+  right: 20px;
   top: 20px;
 }
 
@@ -126,21 +126,21 @@
   block-size: 25px;
   border-left: 1px solid var(--color-button-text);
   border-bottom: 1px solid var(--color-button-text);
-  left: 24px;
-  bottom: 26px;
+  left: 20px;
+  bottom: 20px;
 }
 
 .main {
   font-size: 18px;
   font-family: var(--main-font);
-  padding: 24px;
+  padding: 20px;
 }
 
 .why_hard_section {
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 10px;
-  margin-block-start: 30px;
+  margin-block-start: 40px;
 }
 
 .section_title {
@@ -167,7 +167,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 18px;
-  padding-block-start: 74px;
+  padding-block-start: 82px;
 }
 
 .multitasking_article {
@@ -178,14 +178,14 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 10px;
-  padding-block-start: 79px;
+  padding-block-start: 80px;
 }
 
 .gold_fish_article {
   grid-column: 2/3;
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 19px;
 }
 
 .gold_fish_title {
@@ -201,13 +201,14 @@
 }
 
 .gallery {
-  padding-block-start: 79px;
+  padding-block-start: 80px;
 }
 
 .gallery_decor {
-  padding-block-start: 16px;
+  padding-block-start: 22px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(315px, 1fr));
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
 }
 
@@ -220,7 +221,6 @@
 
 .sunset {
   grid-column: 1/3;
-
 }
 
 .ice-cream {
@@ -237,9 +237,9 @@
 }
 
 footer {
-  min-height: 768px;
+  min-height: 668px;
   height: 100vh;
-  margin-block-start: 36px;
+  margin-block-start: 40px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -254,8 +254,8 @@ footer {
   block-size: 25px;
   border-right: 1px solid var(--color-button-text);
   border-top: 1px solid var(--color-button-text);
-  right: 23px;
-  top: 17px;
+  right: 20px;
+  top: 20px;
 }
 
 .decor::before {
@@ -265,8 +265,8 @@ footer {
   block-size: 25px;
   border-left: 1px solid var(--color-button-text);
   border-bottom: 1px solid var(--color-button-text);
-  left: 24px;
-  bottom: 30px;
+  left: 20px;
+  bottom: 20px;
 }
 
 .footer_title {
@@ -306,15 +306,15 @@ footer {
     flex-direction: column;
     justify-content: end;
     align-items: end;
-    padding-block-start: 170px;
+    padding-block-start: 171px;
   }
 
   .header_title {
-    padding-block-start: 178px;
+    padding-block-start: 175px;
   }
 
   .paragraph_header {
-    padding-block-end: 163px;
+    padding-block-end: 164px;
     max-width: 364px;
   }
 
@@ -371,23 +371,13 @@ footer {
   }
 
   .gallery {
-    padding-block-start: 78px;
+    padding-block-start: 80px;
   }
 
   .gallery_decor {
     grid-template-columns: auto;
   }
-
-  .decor::after {
-    right: 20px;
-    top: 63px;
-  }
-
-  .decor::before {
-    left: 20px;
-    bottom: 7px;
-  }
-
+  
   .footer {
     height: 100vh;
   }
@@ -397,9 +387,9 @@ footer {
   }
 }
 
-@media (width <= 375px) {
+@media (min-width: 375px) {
   .header__theme-menu-list {
-    padding-block-start: 64px;
+    padding-block-start: 65px;
   
   }
 
@@ -415,7 +405,8 @@ footer {
   }
 
   .paragraph_header {
-    padding-block-end: 57px;
+    padding-block-start: 54px;
+    padding-block-end: 0;
   }
 
   .decorated-zone::after {
@@ -439,6 +430,8 @@ footer {
 
   .header {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
 
   .section_title {
@@ -453,7 +446,7 @@ footer {
   .gold_fish_section {
     display: flex;
     flex-direction: column;
-    padding-block-start: 18px;
+    padding-block-start: 22px;
     gap: 0;
   }
 
@@ -468,7 +461,7 @@ footer {
   }
 
   .gallery {
-    padding-block-start: 48px;
+    padding-block-start: 50px;
   }
 
   .gallery_decor {
@@ -479,8 +472,9 @@ footer {
   }
 
   .footer {
-    padding-block-start: 30px;
     height: 100vh;
+    margin-block-start: 29px;
+    margin-block-end: 25px;
   }
 
   .footer_title {
@@ -489,11 +483,11 @@ footer {
 
   .decor::after {
     right: 10px;
-    top: 38px;
+    top: 10px;
   }
 
   .decor::before {
     left: 10px;
-    bottom: 5px;
+    bottom: 12px;
   }
 }
