--- a/styles/style.css
+++ b/styles/style.css
@@ -387,7 +387,7 @@ footer {
   }
 }
 
-@media (min-width: 375px) {
+@media (width <= 375px) {
   .header__theme-menu-list {
     padding-block-start: 65px;
   
